# csv-utils

./: .gitignore  Makefile  README.md  example.py  package-lock.json  pyproject.toml  requirements.test.txt  setup.cfg  setup.py
.circleci/: config.yml
csv_utils/: __init__.py  __main__.py  input.py  output.py  run.py  summary.py  transforms.py  version.py
project/: __init__.py
scripts/: compare_scores.py  filter_rows.py  pull_91.py
tests/: conftest.py  test_input.py  test_main.py  test_output.py  test_run.py  test_summary.py  test_transforms.py
